--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,12 @@
     </dependency>
 
     <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+      <version>3.1.5</version> <!-- Certifique-se de usar a versão correta -->
+    </dependency>
+
+    <dependency>
       <groupId>org.glassfish.jersey.ext</groupId>
       <artifactId>jersey-bean-validation</artifactId>
       <version>4.0.0-M1</version>
@@ -112,6 +118,7 @@
       <artifactId>jakarta.xml.bind-api</artifactId>
       <version>4.0.2</version>
     </dependency>
+
   </dependencies>
 
   <build>
